# botanim-bot

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  DEPLOY.md  Dockerfile  LICENSE  README.md  days.py  deploy.sh  pyproject.toml
.github/workflows/: lint.yml  lint_and_types.yml
app/: __main__.py  config.py  db.py  db.sql  templates.py
app/handlers/: __init__.py  all_books.py  already.py  help.py  keyboards.py  now.py  start.py  vote.py  vote_results.py
app/services/: days.py  exceptions.py  num_to_words.py  validation.py  vote_results.py  votings.py
app/templates/: start.j2  vote_user_not_in_right_mode.j2
botanim_bot/: .env.example  __main__.py  books.py  bot.py  config.py  db.py  db.sql  message_texts.py  num_to_words.py  numtowords.py  schulze.py  templates.py  users.py  votings.py
botanim_bot/handlers/: __init__.py  all_books.py  already.py  cancel.py  help.py  keyboards.py  now.py  response.py  start.py  vote.py  vote_process.py  vote_results.py
botanim_bot/services/: books.py  books_to_words.py  num_to_words.py  schulze.py  users.py  validation.py  vote_mode.py  vote_results.py  votings.py
botanim_bot/templates/: already.j2  already_for_member.j2  category_with_books.j2  help.tpl  now.j2  now.tpl  now_for_member.j2  start.j2  vote_cant_vote.tpl  vote_description.j2  vote_incorrect_books.j2  vote_incorrect_input.j2  vote_no_actual_voting.j2  vote_results.j2  vote_results.tpl  vote_results_no_data.tpl  vote_success.j2
example_bot/: .env.example  __main__.py  config.py
example_bot/handlers/: __init__.py  start.py
example_bot/services/: exceptions.py
