[tool.poetry]
name = "botanim-bot"
version = "0.1.0"
description = ""
authors = ["Alexey Goloburdin <terrarium-a@yandex.ru>"]
readme = "README.md"
packages = [{include = "botanim_bot"}]

[tool.poetry.dependencies]
python = "^3.11"

python-telegram-bot = "==20.0"
aiosqlite = "==0.18.0"
python-dotenv = "==0.21.1"
schulze = "==0.1"
jinja2 = "==3.1.2"

[tool.poetry.group.dev.dependencies]
flake8 = "==6.0.0"
flake8-pyproject = "==1.2.2"
ruff = "==0.0.240"
pyright = "==1.1.291"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 88

[tool.ruff]
select = ["E", "F",
          "N", "I",
          "S"]

[tool.pyright]
reportUnnecessaryTypeIgnoreComment="warning"
