[tool.poetry]
name = "example-bot"
version = "0.1.0"
description = ""
authors = ["Alexey Goloburdin <terrarium-a@yandex.ru>"]
readme = "README.md"
packages = [{include = "example_bot"}]

[tool.poetry.dependencies]
python = "^3.11"

python-telegram-bot = "==20.0"
python-dotenv = "==0.21.1"
jinja2 = "==3.1.2"

[tool.poetry.group.dev.dependencies]
black = "==23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
reportUnnecessaryTypeIgnoreComment="warning"
